Fix jumping notices on page load

--- a/assets/css/less/admin/notification.less
+++ b/assets/css/less/admin/notification.less
@@ -13,17 +13,18 @@
 	padding: 5px 15px;
 }
 
-.post-type-wpbdp_listing .notice:not(.wpbdp-notice),
-.wpbdp-admin-layout .notice:not(.wpbdp-notice),
+.post-type-wpbdp_listing .notice,
+.wpbdp-admin-layout .notice,
 .directory_page_wpbdp_settings .notice,
-.wpbdp-admin-page .wpbdp-upgrade-bar {
+.wpbdp-admin-page .wpbdp-upgrade-bar,
+.wpbdp-admin-page .wpbdp-notice {
 	display: none
 }
 
 .wpbdp-bell-notifications-list {
 	clear: both;
 	margin-top: 0;
-	.notice, .wpbdp-upgrade-bar {
+	.notice, .wpbdp-upgrade-bar, .wpbdp-notice {
 		display: block;
 	}
 }
